--- a/package.json
+++ b/package.json
@@ -24,10 +24,14 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.48.1",
+    "@types/js-cookie": "^3.0.6",
+    "@types/leaflet": "^1.9.16",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "js-cookie": "^3.0.5",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "react": "^19.0.0",
